# Omni-R1

./: README.md  demo.ipynb  pyproject.toml  replace_omni.sh  requirements.txt  setup.sh  video_understanding.ipynb
src/qwen-omni-utils/src/qwen_omni_utils/v2_5/: __init__.py  vision_process.py
src/scripts/: omni_r1_run_training.sh  run_sam_server.sh
transformers/: modeling_qwen2_5_omni.py
