[project]
name = "Omni-R1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.2.1",
    "bitsandbytes>=0.43.0",
    "black>=24.4.2",
    "datasets>=3.2.0",
    "deepspeed>=0.15.4",
    "diskcache>=5.6.3",
    "einops>=0.8.0",
    "flake8>=6.0.0",
    "flash-attn>=2.7.4.post1",
    "hf-transfer>=0.1.4",
    "huggingface-hub[cli]>=0.19.2",
    "isort>=5.12.0",
    "liger-kernel>=0.5.2",
    "numpy>=1.26.4",
    "opencv-python>=4.9.0.80",
    "packaging>=23.0",
    "parameterized>=0.9.0",
    "peft>=0.12.0",
    "pillow>=10.2.0",
    "pycocotools>=2.0.7",
    "qwen-omni-utils[decord]",
    "rouge-score>=0.1.2",
    "ruff>=0.11.10",
    "safetensors>=0.3.3",
    "sam2>=1.1.0",
    "scikit-image>=0.23.0",
    "scipy>=1.13.0",
    "sentencepiece>=0.1.99",
    "tensorboardx>=2.6.2",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision>=0.20.0",
    "transformers",
    "trl>=0.14.0",
    "wandb>=0.18.3",
]

[tool.uv.sources]
transformers = { path = "transformers/transformers_omni.zip" }
qwen-omni-utils = { path = "src/qwen-omni-utils", editable = true }
